# g1man

./: Dockerfile  README.md  README_LARGE.md  cyclonedds_pc.xml
EasyNav/: README.md  cmd_vel_bridge.py
EasyNav/config/: easynav_params.yaml
camera/: README.md  controller.py  controller_mujoco.py  emotions_g1_mujoco.py  g1_client.py  g1_client_mujoco.py  g1_server.py  inference.py  model.py
fastlio2/: README.md  sdk_camera_ros.py
fastlio2_exp/: README.md  lidar_relay.py  webcam_pub.py
g1_pilot_exp/: README.md
install/: local_setup.sh  setup.sh
install/g1pilot/share/g1pilot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/g1pilot/share/g1pilot/description_files/urdf/: g1_29dof.urdf  g1_29dof_dx3.urdf
install/g1pilot/share/g1pilot/launch/: bringup_launcher.launch.py  teleoperation_launcher.launch.py
log/: latest_build
manipulation/: README.md  box_detector.py  example_movement.py  inverse_kinematics.py  inverse_kinematics_collision_avoidance.py  inverse_kinematics_mujoco.py  inverse_kinematics_mujoco_pinocchio.py  motor_mapping.py  motor_mujoco.py  read_coords.py  vision_brain.py  workspace_mapper.py
maps/: maze_map_20260406_200946.yaml  maze_map_20260417_103314.pgm  maze_map_20260417_103314.yaml  maze_map_20260417_103323.pgm  maze_map_20260417_103323.yaml
mujoco/: .README.md.swp  G1JointBridge.py  README.md  g1_actions.py  mirror_arm.py  moveit_brain.py  mujoco_ros2_lidar_bridge.py  mujoco_slam_mapper.py  run_sim_ai_g1.py  vision_brain.py
mujoco2/: README.md  run_sim_ai_g1.py
nav2/: g1_nav2.launch.py  nav2_params.yaml
rviz2/: camera_humanoid.rviz  g1_easynav.rviz  g1_mapping.rviz  g1_teleop.rviz  g1basicmujoco.rviz  lidar_maze.rviz  navigation.rviz
src/unitree_video_decoder/: CMakeLists.txt  package.xml
src/unitree_video_decoder/src/: unitree_video_decoder_node.cpp
teleop/: g1_client_mujoco.py
(+445 files in other folders)
