<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1pilot</name>
  <version>0.0.0</version>
  <description>Unified Pilot and Arm Control for G1</description>
  <maintainer email="clemente.donoso@inria.fr">cdonoso</maintainer>
  <license>BSD 3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>g1_arm</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
